RESOLVED FIXED182170
WebDriver: service hangs after a browser crash
https://bugs.webkit.org/show_bug.cgi?id=182170
Summary WebDriver: service hangs after a browser crash
Carlos Garcia Campos
Reported 2018-01-26 05:07:30 PST
This is currently happening in the GTK+ debug bot. There's a test that makes the browser crash due to an assert, hanging the whole process and preventing the rest of the tests from running. When the browser crashes, we correctly handle the pending requests, by completing them with an error. However, if the client tries to send another command we fail to send the message to the browser and the reply is never sent to the client. In the case of the tests, delete session command is sent, but never gets a reply.
Attachments
Patch (6.69 KB, patch)
2018-01-26 05:11 PST, Carlos Garcia Campos
clopez: review+
Carlos Garcia Campos
Comment 1 2018-01-26 05:11:54 PST
Carlos Garcia Campos
Comment 2 2018-01-26 05:20:19 PST
Radar WebKit Bug Importer
Comment 3 2018-01-26 05:21:18 PST
Note You need to log in before you can comment on or make changes to this bug.